# Quazar

./: Untitled Workspace.csv  pyproject.toml
programming part/: coin.py  config.py  level.py  main.py  platforma.py  player.py  score_counter.py  support.py
