[tool.poetry]
name = "quazar"
version = "0.1.0"
description = "First serious Python project"
authors = ["AdskiyPonchik <adskiyponchik@gmail.com>"]
license = "no license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
